--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               <td>yousef</td>
               <td>
                 <a
-                  data-bs-toggle="tooltips"
+                  data-bs-toggle="tooltip"
                   data-bs-title="view profile"
                   class="btn btn-sm btn-primary"
                   href="user/view.html"
