--- a/user/edit.html
+++ b/user/edit.html
@@ -283,7 +283,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">delete</button>
+            <button type="button" class="btn btn-danger">delete</button>
           </div>
         </div>
       </div>
