--- a/user/view.html
+++ b/user/view.html
@@ -219,7 +219,7 @@
           </li>
 
           <li>
-            <a href="user/add-user.html" class="nav-link text-danger">
+            <a href="user/add-user.html" class="nav-link text-white">
               <svg class="bi pe-none me-2" width="16" height="16">
                 <use xlink:href="#people-circle" />
               </svg>
